fixed the z-index or the dropdown for smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,11 +109,12 @@ button {
 }
 /* --------end scrollbar------------ */
 
-/*-------------dropdwon-------------*/
+/*-------------dropdown-------------*/
 .dropdown {
   position: fixed;
   right: 4%;
   top: 5%;
+  z-index: 20;
 }
 
 .dropbtn {
@@ -133,7 +134,6 @@ button {
 .dropdown-content {
   margin-top: 32px;
   display: none;
-  z-index: 10;
   background-color: rgb(255, 253, 253);
   border: 0.5px solid rgb(185, 146, 159);
 }
